added right single word and left side text with custom design

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 			<div class="content">
 				<nav class="menu">
-					<a href="#" class="menu__item">Analysis <span class="menu__item__span"> learn </span> </a>  
+					<a href="#" class="menu__item">Analysis <span class="menu__item__span" > learn </span> </a>  
 					<a href="#" class="menu__item">Models <span class="menu__item__span"> teach </span> </a>
 					<a href="#" class="menu__item">Philosophy <span class="menu__item__span"> study </span> </a> 
 					<a href="#" class="menu__item">Comparisons <span class="menu__item__span"> examine </span> </a>  
@@ -146,7 +146,7 @@
 				 <p><a href="#" class="underlined underlined--offset">I'm an other very long link and I'm an artist you know.</a></p>
 				  
 				  <h2>Let's play with the gradient</h2>
-				  <a href="#" class="underlined underlined--gradient">PICKLE RIIIICK</a>
+				  <p> <a href="#" class="underlined underlined--gradient">PICKLE RIIIICK</a> </p>
 				  
 				  <h2>Oooh fancy</h2>
 				 <p><a href="#" class="underlined underlined--reverse">I'm an other long link and I don't like lorem.</a></p>
