--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
 		</div>
 		<div class="content">
 			<nav class="menu">
-				<span class="menu__span"> learn </span>
+				<div class="menu__span__group">  <span class="menu__span"> learn  </span> <span class="menu__span">  this </span>  </div>
 				<a href="#" class="menu__item">Analysis </a>
-				<span class="menu__span"> teach </span>
+				<div class="menu__span__group"> <span class="menu__span"> teach </span> <span class="menu__span">  this </span> </div>
 				<a href="#" class="menu__item">Models </a>
-				<span class="menu__span"> study </span>
+				<div class="menu__span__group"> <span class="menu__span"> study </span> <span class="menu__span">  this </span> </div>
 				<a href="#" class="menu__item">Philosophy </a>
-				<span class="menu__span"> examine </span>
+				<div class="menu__span__group"><span class="menu__span"> examine </span> <span class="menu__span">  this </span> </div>
 				<a href="#" class="menu__item">Comparisons </a>
-				<span class="menu__span"> prepare </span>
+				<div class="menu__span__group"><span class="menu__span"> prepare </span>  <span class="menu__span">  this </span> </div>
 				<a href="#" class="menu__item">Specimens </a>
-				<span class="menu__span"> collaborate </span>
-				<a href="#" class="menu__item">Projects </a>
+				<div class="menu__span__group"> <span class="menu__span"> collaborate </span> <span class="menu__span">  this </span> </div>
+				<a href="#" class="menu__item">Projects   </a>
 			</nav>
 			<svg class="scene" width="1440" height="800" preserveAspectRatio="xMinYMid slice" viewBox="0 0 1440 800"
 				xmlns:pathdata="http://www.codrops.com/">
