--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 						</svg></a>
 				</div>
 				<h1 class="codrops-header__title">Gradient Topography Animation</h1>
+
+				
 			</header>
 			<a class="github" href="https://github.com/codrops/GradientTopographyAnimation/"
 				title="Find this project on GitHub"><svg class="icon icon--github">
@@ -86,6 +88,23 @@
 				<a href="https://polarvectors.com/shop/textures/gradient-topography/">Gradient Topography</a>
 			</p>
 		</div>
+
+		<nav>
+			<ul>
+				<li>
+					<a href=""> <img src="./images/facebook.png" alt=""></a>
+				</li>
+				<li>
+					<a href=""> <img src="./images/whatsapp.png" alt=""></a>
+				</li>
+				<li>
+					<a href=""> <img src="./images/telegram.png" alt=""></a>
+				</li>
+				<li>
+					<a href=""> <img src="./images/vkontakte.png" alt=""></a>
+				</li>
+			</ul>
+		</nav>
 		<div class="content">
 			<nav class="menu">
 				<div class="menu__span__group">  <span class="menu__span"> learn  </span> <span class="menu__span">  this </span>  </div>
