design svg white and black and slider responsive

--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
 		</symbol>
 	</svg>
 	<main>
+		<div class="top__link__icon">
+			<ul>
+				<li>
+					<a href=""> <img src="./images/facebook.svg" alt=""></a>
+				</li>
+				<li>
+					<a href=""> <img src="./images/whatsapp.svg" alt=""></a>
+				</li>
+				<li>
+					<a href=""> <img src="./images/telegram3.svg" alt=""></a>
+				</li>
+				<li>
+					<a href="">  <img src="./images/vkontakte.svg" alt=""></a>
+				</li>
+			</ul>
+		</div>
 		<div class="content content--fixed">
 			<header class="codrops-header">
 				<div class="codrops-links">
@@ -89,22 +105,7 @@
 			</p>
 		</div>
 
-		<nav>
-			<ul>
-				<li>
-					<a href=""> <img src="./images/facebook.png" alt=""></a>
-				</li>
-				<li>
-					<a href=""> <img src="./images/whatsapp.png" alt=""></a>
-				</li>
-				<li>
-					<a href=""> <img src="./images/telegram.png" alt=""></a>
-				</li>
-				<li>
-					<a href=""> <img src="./images/vkontakte.png" alt=""></a>
-				</li>
-			</ul>
-		</nav>
+		
 		<div class="content">
 			<nav class="menu">
 				<div class="menu__span__group">  <span class="menu__span"> learn  </span> <span class="menu__span">  this </span>  </div>
