--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 					<a href=""> <img src="./images/whatsapp.svg" alt=""></a>
 				</li>
 				<li>
-					<a href=""> <img src="./images/telegram3.svg" alt=""></a>
+					<a href=""> <img src="./images/telegramWhite-transparent.png" alt=""></a>
 				</li>
 				<li>
-					<a href="">  <img src="./images/vkontakte.svg" alt=""></a>
+					<a href="">  <img src="./images/vkWhit-trransparent.png" alt=""></a>
 				</li>
 			</ul>
 		</div>
